// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormActions rendering 1`] = `
<DocumentFragment>
  <ul
    class="actions"
  />
</DocumentFragment>
`;

exports[`FormActions rendering download links 1`] = `
<DocumentFragment>
  <ul
    class="actions"
  >
    <li>
      <a
        download="image.png"
        href="http://example.com/image.png"
        type="image/png"
      >
        <span
          data-component="Download"
          data-props="{}"
        />
        TRANSLATE(Example PNG Link)
      </a>
    </li>
    <li>
      <a
        download="image.svg"
        href="http://example.com/image.svg"
        type="image/svg+xml"
      >
        <span
          data-component="Download"
          data-props="{}"
        />
        TRANSLATE(Example SVG Link)
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`FormActions rendering download links with data after mounting 1`] = `
<DocumentFragment>
  <ul
    class="actions"
  >
    <li>
      <a
        href="http://example.com"
      >
        <span
          data-component="Link"
          data-props="{}"
        />
        <span
          data-component="Trans"
          data-props="{}"
        >
          Permalink
        </span>
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`FormActions rendering download links with data after mounting 2`] = `
<DocumentFragment>
  <ul
    class="actions"
  >
    <li>
      <a
        download="image.png"
        href="http://example.com/image.png"
        type="image/png"
      >
        <span
          data-component="Download"
          data-props="{}"
        />
        TRANSLATE(Example PNG Link)
      </a>
    </li>
    <li>
      <a
        download="image.svg"
        href="http://example.com/image.svg"
        type="image/svg+xml"
      >
        <span
          data-component="Download"
          data-props="{}"
        />
        TRANSLATE(Example SVG Link)
      </a>
    </li>
    <li>
      <a
        href="http://example.com"
      >
        <span
          data-component="Link"
          data-props="{}"
        />
        <span
          data-component="Trans"
          data-props="{}"
        >
          Permalink
        </span>
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`FormActions rendering download links with data after mounting 3`] = `
<DocumentFragment>
  <ul
    class="actions"
  >
    <li>
      <a
        download="image.png"
        href="http://example.com/image.png"
        type="image/png"
      >
        <span
          data-component="Download"
          data-props="{}"
        />
        TRANSLATE(Example PNG Link)
      </a>
    </li>
    <li>
      <a
        download="image.svg"
        href="http://example.com/image.svg"
        type="image/svg+xml"
      >
        <span
          data-component="Download"
          data-props="{}"
        />
        TRANSLATE(Example SVG Link)
      </a>
    </li>
    <li>
      <a
        href="http://example.com"
      >
        <span
          data-component="Link"
          data-props="{}"
        />
        <span
          data-component="Trans"
          data-props="{}"
        >
          Permalink
        </span>
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`FormActions rendering with a permalink 1`] = `
<DocumentFragment>
  <ul
    class="actions"
  >
    <li>
      <a
        href="http://example.com"
      >
        <span
          data-component="Link"
          data-props="{}"
        />
        <span
          data-component="Trans"
          data-props="{}"
        >
          Permalink
        </span>
      </a>
    </li>
  </ul>
</DocumentFragment>
`;
